Fix headings being covered by site header when using anchors

--- a/static/css/single.css
+++ b/static/css/single.css
@@ -48,6 +48,14 @@ h4 {
     margin: 1em 0.8em 0.4em 0.8em;
 }
 
+h2,
+h3,
+h4,
+h5 {
+    padding-top: 2.5em;
+    margin-top: -2em;
+}
+
 article {
     margin: 2em 0;
 }
